--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Version 0.18.3.1:
+ -     --- Fixed improper variable names     --- Fixed missing table column names
+ - Merge branch 'release-0.18.3.0' into preproduction
+ - Merge branch 'release-0.18.2.0' into preproduction
+ - Merge branch 'hotfix-0.18.1.1' into preproduction
+
 Version 0.18.3.0:
  -     --- Removed console log statement
  -     --- Fixed missing metadata from test results log
