--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 0.18.3.2:
+ - Merge branch 'hotfix-0.18.3.1' into preproduction
+
 Version 0.18.3.1:
  -     --- Fixed improper variable names     --- Fixed missing table column names
  - Merge branch 'release-0.18.3.0' into preproduction
