--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,13 @@
+Version 0.18.5.0:
+ -     --- Added email feature to script failures         -- Will now send emails if script crashes or on multiple processes     --- Cron executions are piped to a file
+ -     --- Added logging to file for each execution
+ -     --- Added monitoring section for logging script executions
+ -     --- Added modification of user language
+ -     --- Removed user activity module
+ - Merge branch 'hotfix-0.18.4.1' into develop
+ -     --- Fixed misnamed variable name
+ - Merge branch 'release-0.18.4.0' into develop
+
 Version 0.18.4.1:
  - Merge branch 'release-0.18.4.0' into preproduction
  - Merge branch 'hotfix-0.18.3.2' into preproduction
