--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 0.18.6.3:
+ - Merge branch 'hotfix-0.18.6.2'
+
 Version 0.18.6.2:
  -     --- Disabled content nosniff         -- Caused errors in production and wouldn't get any data. Something to do with         XXS
  - Merge branch 'preproduction'
