--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Version 0.18.8.0:
+ -     --- Removed unused files     --- Updated security questions database logging
+ - Merge branch 'hotfix-0.18.7.1' into develop
+ -     --- Fixed issue of passing two arrays in arguments         -- Need to pass references according to perl docs
+ - Merge branch 'release-0.18.7.0' into develop
+
 Version 0.18.7.1:
  - Merge branch 'preproduction'
  - Merge branch 'release-0.18.7.0' into preproduction
