--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.18.11.1:
+ -     --- Added missing table
+ - Merge branch 'release-0.18.11.0' into preproduction
+ - Merge branch 'HotFix-0.18.10.1' into preproduction
+
 Version 0.18.11.0:
  - Merge branch 'checkinFeature' into develop
  - Merge branch 'HotFix-0.18.10.1' into develop
