--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.18.12.0:
+ -     --- Added push notifications for new lab results
+ - Merge branch 'hotfix-0.18.11.1' into develop
+ - Merge branch 'release-0.18.11.0' into develop
+
 Version 0.18.11.1:
  -     --- Added missing table
  - Merge branch 'release-0.18.11.0' into preproduction
