--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.18.13.0:
+ -     --- Fully removed all programming default config files         -- Now there is one central config     --- Cleaned up packages
+ -     --- Starting one config file
+ - Merge branch 'release-0.18.12.0' into develop
+
 Version 0.18.12.0:
  -     --- Added push notifications for new lab results
  - Merge branch 'hotfix-0.18.11.1' into develop
