--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+Version 0.18.15.1:
+ - Merge branch 'preproduction'
+ - Merge branch 'release-0.18.15.0' into preproduction
+ - Merge branch 'hotfix-0.18.14.2' into preproduction
+ - Merge branch 'hotfix-0.18.14.2'
+ - Merge branch 'hotfix-0.18.14.1' into preproduction
+
 Version 0.18.15.0:
  -     --- Fixed up comments
  - Merge branch 'hotfix-0.18.14.2' into develop
