--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.18.16.1:
+ - Merge branch 'hotfix-0.18.15.1'
+ -     --- Removed undefined reference
+
 Version 0.18.15.1:
  - Merge branch 'preproduction'
  - Merge branch 'release-0.18.15.0' into preproduction
