--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.18.:
+ - Merge branch 'hotfix-0.18.16.4'
+ -    --- Modified the function getPatientDeviceIdentifiers to include iOS
+
 Version 0.18.16.4:
  -    --- Remove file
  - Merge branch 'hotfix-0.18.16.3'
