--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 0.18.16.5:
+
+
 Version 0.18.:
  - Merge branch 'hotfix-0.18.16.4'
  -    --- Modified the function getPatientDeviceIdentifiers to include iOS
