--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.18.16.6:
+ - Merge branch 'hotfix-0.18.16.5'
+ -    --- Remove empy Registration Id Devices when retrieving the Patient Devices
+
 Version 0.18.16.5:
 
 
