--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.18.16.15:
+ - Merge branch 'hotfix-0.18.16.14'
+ - Default appointment scheduled if empty, change LibreOffice version, and limit up to 15 patient devices when sending push notification.
+
 Version 0.18.16.14:
  - Merge branch 'hotfix-0.18.16.13'
  - Added the RefTableRowTitle for EN and FR when inserting to Notification
