--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.18.16.16:
+ - Merge branch 'hotfix-0.18.16.15'
+ - Fix Update Appointment Check-In when record does not exist
+
 Version 0.18.16.15:
  - Merge branch 'hotfix-0.18.16.14'
  - Default appointment scheduled if empty, change LibreOffice version, and limit up to 15 patient devices when sending push notification.
