--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 0.18.17.1:
+ -    --- Support for Windows OS - fixing slash formats    --- Issue #5 on GitLab
+
 Version 0.18.17.0:
  - Merge branch 'hotfix-0.18.16.16'
  -    --- Us htaccess to configure PHP variables, added FEDERATED variable for remote database connection, changed Opal Check-In to use the FEDERATED variable
