--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.18.17.7:
+ -     ---- Modified git ignore to exclude vscode, push notification test script, and added single quotes for patient ID
+ - Merge branch 'hotfix-0.18.17.6'
+ - Patch the slash direction in config.php
+
 Version 0.18.17.6:
  - Merge branch 'hotfix-0.18.17.5'
  -    --- Fixed syntax error unexpected ; expecting ) in php/classes/Patient.php on line 663
