--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 0.18.18.1:
+ -     --- Improve the queries to fetch data from ORMS
+
 Version 0.18.18.0:
  -     -- updated the git ignore file
  -     -- forgot to include the dbv version 13
