--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.18.19.2:
+ - Quick fix on additinal single quote for $defaultLastTransferred
+ - Merge branch 'hotfix-0.18.19.1'
+
 Version 0.18.19.1:
  - Fix the missing single quote for $defaultLastTransferred
  - Merge branch 'staging'
