--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.18.19.3:
+ -      ---- Quick patch to send notification for the legacy questionnaire
+ - Merge branch 'hotfix-0.18.19.2' into staging
+ - Merge branch 'hotfix-0.18.19.1' into staging
+
 Version 0.18.19.2:
  - Quick fix on additinal single quote for $defaultLastTransferred
  - Merge branch 'hotfix-0.18.19.1'
