--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 0.21.2.3:
+ - In Priority module was using the incorrect temp table name
+
 Version 0.21.2.2:
  - Missed another upper case P
 
